--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Rajrup Das",
   "license": "BSD-3-Clause",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "uuid": "^9.0.1"
