--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern_projects",
+  "name": "mern_projects-mongodb-section",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -15,7 +15,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.5.2",
+    "mongoose-sequence": "^5.3.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
